boinc (5.4.11-3) unstable; urgency=low

  [ Debconf translations ]
  * Added French (fr.po) by Cyril Brulebois
    <cyril.brulebois@enst-bretagne.fr>. (closes: #393499)

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Mon, 16 Oct 2006 20:07:37 +0200

boinc (5.4.11-2) unstable; urgency=low

  [ Frank S. Thomas ]
  * Use debconf to ask whether the default BOINC data directory
    /var/lib/boinc-client should be removed while purging the boinc-client
    package. The wording of the template was taken from the
    dbconfig-common/purge template.
  * debian/control:
    - Added po-debconf to Build-Depends because debconf-updatepo is called in
      the clean target of debian/rules.
    - Added XS-Vcs-Svn field to the source stanza.
    - Changed order of Build-Depends: List packages that are needed for the
      packaging first, then list packages that are needed to compile the
      upstream source.
  * debian/rules:
    - When using the --target configure option also append --program-prefix=""
      to avoid that programs are prefixed with "i686-pc-linux-gnu-".
    - Install the checkin_notes file as upstream changelog.
  * debian/copyright:
    - Added copyright note about the Debian packaging.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri,  6 Oct 2006 10:35:17 +0200

boinc (5.4.11-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
  * Added the header file lib/gui_rpc_client.h to the boinc-dev package as
    requested by Folkert van Heusden.
  * debian/control:
    - Removed Greg Norris <adric@debian.org> from the Uploaders field.
  * debian/rules:
    - Applied patch from Robert Millan <rmh@aybabtu.com> which simplifies the
      platform override for i386. We are now using --target instead of the
      --build and --host switches. This also needed some changes in
      boinc-client.install and boinc-manager.install. Thanks Robert for the
      patch. (closes: #383871)
  * debian/patches/: